--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         </div>
     </section>
 
-    <section class="audrey-hepburn">
-        <div class="slick-slider">
+        <div class="audrey-hepburn slick-slider">
+
             <div>
                 <div class="float-left">
                     <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
@@ -121,6 +121,7 @@
                     <img src="img/audrey-img.jpg" class="lp-respons">
                 </div>
             </div>
+
             <div>
                 <div class="float-left">
                     <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
@@ -132,6 +133,7 @@
                     <img src="img/audrey-img-2.jpg" class="lp-respons">
                 </div>
             </div>
+
             <div>
                 <div class="float-left">
                     <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
@@ -155,28 +157,29 @@
                     <img src="img/audrey-img-4.jpg" class="lp-respons">
                 </div>
             </div>
+
         </div>
-        <!--<div>-->
-        <!--<div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">-->
 
-        <!--&lt;!&ndash; Carousel items &ndash;&gt;-->
-        <!--<div class="carousel-inner">-->
-        <!--<div class="item active">-->
+    <!--<div>-->
+    <!--<div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">-->
 
-        <!--</div>-->
-        <!--<div class="item ">-->
+    <!--&lt;!&ndash; Carousel items &ndash;&gt;-->
+    <!--<div class="carousel-inner">-->
+    <!--<div class="item active">-->
 
-        <!--</div>-->
-        <!--<div class="item ">-->
+    <!--</div>-->
+    <!--<div class="item ">-->
 
-        <!--</div>-->
-        <!--<div class="item ">-->
+    <!--</div>-->
+    <!--<div class="item ">-->
 
-        <!--</div>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</div>-->
-    </section>
+    <!--</div>-->
+    <!--<div class="item ">-->
+
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
 
     <section class="reason">
         <div class="container">
@@ -376,10 +379,12 @@
         dots: true,
         infinite: true,
         slidesToShow: 1,
-        slidesToScroll: 1
+        slidesToScroll: 1,
     });
 
 </script>
+
+
 </body>
 </html>
 
