--- a/index.html
+++ b/index.html
@@ -375,12 +375,15 @@
 <script src="js/slick.min.js"></script>
 
 <script>
-    $('.slick-slider').slick({
-        dots: true,
-        infinite: true,
-        slidesToShow: 1,
-        slidesToScroll: 1,
+    $(function () {
+        $('.slick-slider').slick({
+            dots: true,
+            infinite: true,
+            slidesToShow: 1,
+            slidesToScroll: 1
+        });
     });
+
 
 </script>
 
