--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <div id="popup-menu">
             <div class="hg-wd">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li class="active"><a href="#">Categories</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li class="active"><a href="#categories">Categories</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#events">Events</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
                 </ul>
                 <a href="#"><span class="close-menu"><img src="img/X-logo.png">close</span></a>
             </div>
@@ -41,7 +41,7 @@
                 <a href="#">Menu</a>
             </div>
         </div>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" id="home">
             <!-- Indicators -->
             <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0"></li>
@@ -84,7 +84,7 @@
         </div>
     </section>
 
-    <section class="free-psd">
+    <section class="free-psd" id="about">
         <div class="container">
             <h2>The most inclusive</h2>
             <h1>Free PSD Template</h1>
@@ -104,7 +104,7 @@
         </div>
     </section>
 
-        <div class="audrey-hepburn slick-slider">
+        <div class="audrey-hepburn slick-slider" id="categories">
 
             <div>
                 <div class="float-left">
@@ -177,7 +177,7 @@
     <!--</div>-->
     <!--</div>-->
 
-    <section class="reason">
+    <section class="reason" id="gallery">
         <div class="container">
             <h1>Reasons to be happy</h1>
             <hr>
@@ -213,13 +213,13 @@
         </div>
     </section>
 
-    <section class="forth">
+    <section class="forth" id="events">
         <h1>I love you for all that you are, all that you have been,
             <br>and all you're yet to be.</h1>
         <p>Quote of the day, from <a href="#"> Love Quotes</a></p>
     </section>
 
-    <section class="buy-posters">
+    <section class="buy-posters" id="blog">
         <div class="container">
             <h1>Buy Poster Prints</h1>
             <hr>
@@ -273,7 +273,7 @@
         </div>
     </section>
 
-    <section class="footer">
+    <section class="footer" id="contact">
         <div class="container">
             <div class="col-md-3">
                 <h1>BROWSE</h1>
